All data fixed for dinnerOverview, some layout problems left

--- a/style/style.css
+++ b/style/style.css
@@ -17,6 +17,10 @@ hr {
 	margin-top: 10px;
 }
 
+.border-left {
+	border-left: 1.5px solid #000; 
+}
+
 #exampleView, #screenAfterView {
 	height: 100%;
 }
@@ -117,6 +121,12 @@ hr {
 
 #confirm-dinner-btn {
 	margin-top: 20px;
+}
+
+#edit-dinner-btn {
+	margin-top: 3px;
+	margin-right: 5px;
+	margin-left: 20px;
 }
 
 #print-btn {
@@ -253,10 +263,26 @@ hr {
 
 /* "Dinner Overview"-page layout*/
 
-.myDinnerBar {
-	width: 100%;
-	padding-top: 70px;
+#myDinnerBar {
 	border: 2px solid;
+
 	border-radius: 0;
 	background: #ffe599;
+}
+
+.my-dinner-head {
+	margin-left: 15px;
+	margin-top: 15px;
+}
+
+.dishCost {
+	text-align: right;
+	color: red;
+}
+
+.totalPrice {
+	max-height: 640px;
+	vertical-align: text-bottom; 
+	color: red;
+	font-weight: bold;
 }
